--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          OPENAI_API_MODEL: "gpt-4"
+          OPENAI_API_MODEL: "gpt-3.5-turbo"
           EXCLUDE: "**/*.xcodeproj/**, **/*.xcworkspace/**, Pods/**, **/*.lock, **/*.md"
           LANGUAGE: "English"
           MAX_TOKENS: "700"
