--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -15,9 +15,11 @@ jobs:
 
       - name: AI Code Reviewer
         uses: agjs/Github-Actions-AI-Code-Review@main
+        env:
+          OPENAI_API_BASE: "https://free.v36.cm/v1"
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_API_KEY: sk-RlpiyjpoQgegcg6y00B9D5Ca35F642FaAf456cD63788Fb68
           OPENAI_API_MODEL: "gpt-3.5-turbo"
           EXCLUDE: "**/*.xcodeproj/**, **/*.xcworkspace/**, Pods/**, **/*.lock, **/*.md"
           LANGUAGE: "English"
