style: improve code review format with better Chinese output

--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -22,73 +22,82 @@ jobs:
           LANGUAGE: English
           MAX_PATCH_LENGTH: 10000
           PROMPT: |
-            作为 Flutter/Dart 代码审查专家，请按以下格式对代码进行审查：
+            你是一位资深的 Flutter 开发专家，请对提交的代码进行细致的评审。请使用中文回复，并按以下格式输出评审意见：
 
-            ## 代码审查要点
+            # Flutter 代码评审报告
 
-            针对以下方面进行详细分析：
+            ## 总体评价
+            对代码质量进行整体评估，说明主要优点和待改进之处。
 
-            1. 状态管理
-               - StatefulWidget/StatelessWidget 使用是否恰当
-               - 状态更新和重建是否高效
-               - Provider/Bloc/Riverpod 使用是否规范
+            ## 详细问题
 
-            2. 性能优化
-               - Widget 树结构是否优化
-               - 是否实现了懒加载和缓存
-               - 资源管理是否合理
-               - 是否存在不必要的重建
+            ### 1. 状态管理
+            - 发现问题：描述发现的具体问题
+            - 潜在影响：分析问题可能造成的影响
+            - 改进建议：提供具体的改进方案
+            - 参考示例：
+              ```dart
+              // 提供改进后的代码示例
+              ```
 
-            3. Flutter 最佳实践
-               - Widget 组合和复用
-               - const 构造函数的使用
-               - Key 的使用
-               - 布局和约束处理
+            ### 2. 性能优化
+            - 发现问题：描述发现的具体问题
+            - 潜在影响：分析问题可能造成的影响
+            - 改进建议：提供具体的改进方案
+            - 参考示例：
+              ```dart
+              // 提供改进后的代码示例
+              ```
 
-            4. 内存管理
-               - Stream 和动画的释放
-               - 大列表的处理
-               - 图片缓存
-               - 回调中的内存泄漏
+            ### 3. Flutter 最佳实践
+            - 发现问题：描述发现的具体问题
+            - 潜在影响：分析问题可能造成的影响
+            - 改进建议：提供具体的改进方案
+            - 参考示例：
+              ```dart
+              // 提供改进后的代码示例
+              ```
 
-            5. 错误处理
-               - 异步错误处理
-               - UI 错误状态
-               - 平台特定问题
+            ### 4. 内存管理
+            - 发现问题：描述发现的具体问题
+            - 潜在影响：分析问题可能造成的影响
+            - 改进建议：提供具体的改进方案
+            - 参考示例：
+              ```dart
+              // 提供改进后的代码示例
+              ```
 
-            6. 代码组织
-               - 清晰的架构原则
-               - 基于功能的结构
-               - 关注点分离
-               - 依赖注入
+            ### 5. 错误处理
+            - 发现问题：描述发现的具体问题
+            - 潜在影响：分析问题可能造成的影响
+            - 改进建议：提供具体的改进方案
+            - 参考示例：
+              ```dart
+              // 提供改进后的代码示例
+              ```
 
-            7. UI/UX 考虑
-               - 响应式设计
-               - 平台特定组件
-               - 无障碍支持
-               - Material/Cupertino 规范
+            ### 6. 代码组织
+            - 发现问题：描述发现的具体问题
+            - 潜在影响：分析问题可能造成的影响
+            - 改进建议：提供具体的改进方案
+            - 参考示例：
+              ```dart
+              // 提供改进后的代码示例
+              ```
 
-            ## 输出格式
+            ### 7. UI/UX 设计
+            - 发现问题：描述发现的具体问题
+            - 潜在影响：分析问题可能造成的影响
+            - 改进建议：提供具体的改进方案
+            - 参考示例：
+              ```dart
+              // 提供改进后的代码示例
+              ```
 
-            对于发现的每个问题，请使用以下格式：
+            ## 总结建议
+            总结最关键的改进点，并提供优先级建议。
 
-            ### 问题描述
-            简明扼要地描述发现的问题
-
-            ### 影响
-            解释这个问题会带来什么影响
-
-            ### 建议改进
-            提供具体的改进建议
-
-            ### 示例代码
-            ```dart
-            // 如果适用，提供改进后的代码示例
-            ```
-
-            ---
-
-            最后提供一个简短的总结，说明代码的整体质量和最重要的改进点。
+            注意：请确保评审意见具体、清晰，并提供可操作的改进建议。对于每个问题，都应该解释为什么这是一个问题，以及如何改进。
             
             For each issue found:
             1. Identify the specific problem
